--- a/site/blueprints/pages/info.yml
+++ b/site/blueprints/pages/info.yml
@@ -1,59 +1,55 @@
 title: Info
-status:
-  draft:
-    label: Draft
-    text: The article is still in draft mode. It can only be seen by editors with Panel access.
-  unlisted:
-    label: In Review
-    text: The article is online and can be visited with the direct URL. The team must still give the final go to publish it.
-  listed:
-    label: Published
-    text: The article is online and listed in the blog
+
+options:
+  changeSlug: false
+  changeStatus: false
+  delete: false
+  duplicate: false
+
 tabs:
+
   content:
     icon: text
-    label: Main Content
-    fields:
-      page-title:
-        label: Title
-        type: text
-        width: 2/3
-      text:
-        label: Info Text
-        type: textarea
-        size: large
-        width: 2/3
-      images:
-        label: Images
-        type: files
-        width: 1/3
-      footnotes:
-        label: Footnotes
-        type: textarea
-        size: medium
-        width: 2/3
+    label: About
+    columns:
+
+      - width: 2/3
+        fields:
+
+          text:
+            label: About
+            type: textarea
+
+      - width: 1/3
+        sections:
+
+          uploads: sections/files
+
   team:
     icon: smile
     label: Team
     fields:
-      people:
-        label: people
+
+      team:
+        label: Team
         type: structure
         fields:
+
           name:
             label: Name
             type: text
-            width: 2/3
+            width: 1/3
+
           image:
-            label: Image
-            type: files
-            width: 2/3
+            extends: fields/image
+            width: 1/3
+
           link:
             label: External Link
             type: url
-            width: 2/3
+            width: 1/3
+
           intro:
             label: Intro
             type: textarea
-            size: medium
-            width: 2/3
+            buttons: false
