--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -1,16 +1,30 @@
 title: Wartenau
 
-columns:
+tabs:
 
-  - width: 2/3
-    sections:
+  dashboard:
+    icon: dashboard
+    columns:
 
-      posts:
-        extends: sections/posts
-        parent: site.page('posts')
+      - width: 2/3
+        sections:
 
-  - width: 1/3
-    sections:
+          posts:
+            extends: sections/posts
+            parent: site.page('posts')
 
-      pages:
-        extends: sections/pages
+      - width: 1/3
+        sections:
+
+          pages:
+            extends: sections/pages
+
+  settings:
+    icon: cog
+    fields:
+
+      categories:
+        type: structure
+        fields:
+          name:
+            type: text
