--- a/site/blueprints/pages/info.yml
+++ b/site/blueprints/pages/info.yml
@@ -10,14 +10,16 @@ tabs:
 
   content:
     icon: text
-    label: About
+    label: Info
     columns:
 
       - width: 2/3
         fields:
 
           text:
-            label: About
+            label:
+              en: About {{ site.title }}
+              de: Über {{ site.title }}
             type: textarea
 
       - width: 1/3
@@ -45,11 +47,12 @@ tabs:
             width: 1/3
 
           link:
-            label: External Link
-            type: url
+            extends: fields/url
             width: 1/3
 
           intro:
-            label: Intro
+            label:
+              en: Introduction
+              de: Kurz-Vorstellung
             type: textarea
             buttons: false
