hide error page, show cats in posts section

--- a/site/blueprints/sections/posts.yml
+++ b/site/blueprints/sections/posts.yml
@@ -6,6 +6,6 @@ empty:
   de: Noch keine Beiträge angelegt
 type: pages
 sortable: false
-info: "{{page.keywords}}"
+info: "{{page.categories}}"
 image:
   back: white
