--- a/site/blueprints/pages/info.yml
+++ b/site/blueprints/pages/info.yml
@@ -33,26 +33,5 @@ tabs:
     fields:
 
       team:
+        extends: fields/people
         label: Team
-        type: structure
-        fields:
-
-          name:
-            label: Name
-            type: text
-            width: 1/3
-
-          image:
-            extends: fields/image
-            width: 1/3
-
-          link:
-            extends: fields/url
-            width: 1/3
-
-          intro:
-            label:
-              en: Introduction
-              de: Kurz-Vorstellung
-            type: textarea
-            buttons: false
