--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -1,58 +1,73 @@
 title: Post
-
 icon: page
 
-columns:
+tabs:
 
-  - width: 2/3
-    fields:
+  content:
+    icon: text
+    label:
+      en: Content
+      de: Inhalt
+    columns:
 
-      subtitle:
-        label:
-          en: Subtitle
-          de: Untertitel
-        type: text
-
-      date:
-        type: date
-        label:
-          en: Date
-          de: Datum
-        help:
-          en: Can be publication date or event date
-          de: Kann Veröffentlichungs- oder Veranstaltungsdatum sein
-
-      text: fields/content
-
-      downloads:
-        label: Downloads
-        type: files
-
-      links: fields/links
-
-      authors:
-        extends: fields/people
-        label:
-          en: About the author(s)
-          de: Über die Autoren
-
-      credits: fields/credits
-
-      keywords: fields/keywords
-
-  - width: 1/3
-    sections:
-
-      fields2:
-        type: fields
+      - width: 2/3
         fields:
 
-          categories: fields/categories
-
-          titleImage:
-            extends: fields/image
+          subtitle:
             label:
-              en: Title image
-              de: Titelbild
+              en: Subtitle
+              de: Untertitel
+            type: text
 
-      uploads: sections/files
+          text: fields/content
+
+      - width: 1/3
+        sections:
+
+          fields-1:
+            type: fields
+            fields:
+
+              titleImage:
+                extends: fields/image
+                layout: cards
+                label:
+                  en: Title image
+                  de: Titelbild
+
+          uploads: sections/files
+
+  info:
+    icon: question
+    label: Info
+    columns:
+
+      - width: 2/3
+        fields:
+
+          date: fields/date
+
+          authors:
+            extends: fields/people
+            label:
+              en: Author(s)
+              de: Autoren
+
+          downloads: fields/downloads
+
+          links: fields/links
+
+          attributes: fields/attributes
+
+          keywords: fields/keywords
+
+      - width: 1/3
+        sections:
+
+          fields-1:
+            type: fields
+            fields:
+
+              categories: fields/categories
+
+          uploads: sections/files
