--- a/assets/frontend/package.json
+++ b/assets/frontend/package.json
@@ -21,7 +21,7 @@
     "node-sass": "^5.0.0",
     "rollup-plugin-scss": "^2.6.1",
     "sirv-cli": "^1.0.11",
-    "svelte-preprocess": "^4.6.9",
-    "svelte-routing": "1.4.0"
+    "svelte-navigator": "^3.1.5",
+    "svelte-preprocess": "^4.6.9"
   }
 }
