--- a/assets/frontend/package.json
+++ b/assets/frontend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "lazysizes": "^5.3.0",
+    "matter-js": "^0.17.1",
     "node-sass": "^5.0.0",
     "rollup-plugin-scss": "^2.6.1",
     "sirv-cli": "^1.0.11",
