--- a/assets/frontend/package.json
+++ b/assets/frontend/package.json
@@ -20,6 +20,8 @@
     "lazysizes": "^5.3.0",
     "matter-js": "^0.17.1",
     "node-sass": "^5.0.0",
+    "pathseg": "^1.2.0",
+    "poly-decomp": "^0.3.0",
     "rollup-plugin-scss": "^2.6.1",
     "sirv-cli": "^1.0.11",
     "svelte-navigator": "^3.1.5",
