add imprint page

--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -24,6 +24,7 @@ tabs:
             status: published
             template:
               - info
+              - imprint
               - mailinglist
 
   settings:
