disallow some field translations

--- a/site/blueprints/fields/date.yml
+++ b/site/blueprints/fields/date.yml
@@ -5,3 +5,4 @@ label:
 help:
   en: Can be publication date or event date
   de: Kann Veröffentlichungs- oder Veranstaltungsdatum sein
+translate: false
